--- a/css/style.css
+++ b/css/style.css
@@ -113,9 +113,12 @@ img {
     height: 51px;
 }
 .header__span {
-    font-size: 20px;
-    color: #000;
+    font-size: 20px;  
     margin-right: 15px;
+}
+.header__span a {
+    text-decoration: none;
+    color: #000;
 }
 .btn {
     cursor: pointer;
@@ -296,11 +299,124 @@ img {
     width: 240px;
     height: 65px;
 }
-
 .video__player {
     padding-top: 229px;
     padding-bottom: 172px;
 }
 video {
     border-radius: 16px;
+}
+.product {
+    padding-top: 120px;
+}
+.product__container {
+    max-width: 1370px;
+    margin: 0 auto;
+}
+.product__inner {
+    display: flex;
+}
+.product__profile {
+    position: relative;
+    margin-right: 86px;
+}
+.product__photo {
+    border-radius: 18px;
+    width: 638px;
+    height: 573px;
+    background: rgba(1, 153, 109, 0.2);
+}
+.product__img {
+    margin: 0 auto;
+}
+.product__card {
+    position: absolute;
+    padding: 22px 55px 28px 61px; 
+    border-radius: 4px;
+    background: #fff;
+    z-index: 2;
+    bottom: -14%;
+    left: -6%;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    text-align: center;
+}
+.text-h5 {
+    font-size: 14px;
+    line-height: 157%;
+    text-align: center;
+    color: #000;
+    margin-bottom: 7px;
+}
+.line {
+    border: 0.75px solid #000;
+    width: 110px;
+    height: 0px;
+    margin: 0 auto 13px;
+}
+.card__img {
+    margin: 0 auto;
+    border-radius: 100%;
+    background-color:  rgba(1, 153, 109, 0.2);
+    margin-bottom: 10px;
+}
+.card__span {
+    font-size: 11px;
+    line-height: 157%;
+    color: #000;
+}
+.card_p {
+    margin: 20px 0 15px;
+    font-size: 15px;
+    line-height: 157%;
+    color: #000;
+}
+.product__list{
+    font-size: 10px;
+    line-height: 157%;
+    text-align: left;
+    color: #000;
+}
+.product__list li:first-child{
+    margin-bottom: 16px;
+}
+.product__text {
+    max-width: 584px;;
+}
+.product_h4 {
+    margin-bottom: 12px;
+}
+.product_h2 {
+    margin-bottom: 22px;
+}
+.product__text-p{
+    margin-bottom: 33px;
+}
+.footer {
+    padding-top: 241px;
+}
+.footer__container {
+    background-color: var(--color_darkgreen);
+    padding: 73px 0 144px 235px;
+}
+.text-h3 {
+    
+}
+.footer__nav {
+    list-style: none;
+    font-size: 25px;
+}
+.footer__nav li a {
+    text-decoration: none;
+    color: #fff;
+}
+.footer__nav li{
+    margin-bottom: 65px;
+}
+.footer__nav li:last-child {
+    margin-bottom: 0;
+}
+.footer__head {
+    font-family: var(--third-family);
+    font-weight: 900;
+    font-size: 40px;
 }
